--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -33,7 +33,8 @@ code {
 
 
 }
-.title {       
+.title {  
+  margin-top:15px;     
   background-image: linear-gradient(225deg, #ff28ea, #0b9c17);
   filter: drop-shadow(0 20px 30px #28d8ff33);
   color: black;
