--- a/src/component/daily-cost/add-food/add-food.css
+++ b/src/component/daily-cost/add-food/add-food.css
@@ -21,7 +21,7 @@ select {
     margin-right: 10px;
 }
 
-.left-content button {
+.left-content  button {
     line-height: 1.5em;
     padding: 0.6em 1em 0.6em 1em;
     font: inherit;
@@ -29,10 +29,12 @@ select {
     color: white;
     border: none;
     background-color: rgb(0, 166, 255);
-    width: 200px;
+    width: 150px;
     cursor: pointer;
 }
-
+.left-content .form select{
+    margin-right: 20px!important;
+}
 .left-content button:hover {
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
