--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap");
+
 html,
 body {
   width: 100%;
@@ -8,41 +10,51 @@ body {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Kosugi Maru", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 /* App*/
-.App{
-  height: 200px;
+.App {
+  /* height: 600px; */
   margin-right: 10%;
   margin-left: 10%;
+  margin-top: 16px;
+  padding: 8px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 16px;
+  background-color: white;
 }
-.App h1 {
+.App h2 {
   text-align: center;
-  font-family: 'Pacifico', cursive;
+  font-family: "Kosugi Maru", "Pacifico", cursive;
   font-size: 50px;
-
-
+  color: gray;
 }
-.title {  
-  margin-top:15px;     
-  background-image: linear-gradient(225deg, #ff28ea, #0b9c17);
-  filter: drop-shadow(0 20px 30px #28d8ff33);
-  color: black;
-  -webkit-text-fill-color: transparent;
+.title {
+  border: solid 2.5px rgb(240, 232, 218);
+  border-radius: 36px;
+  width: 30%;
+  margin: auto;
+  padding: 8px;
+  /* background-image: linear-gradient(225deg, #ff28ea, #0b9c17);
+  filter: drop-shadow(0 20px 30px #28d8ff33); */
+
+  /* -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
-  -webkit-box-decoration-break: clone;
+  -webkit-box-decoration-break: clone; */
+  margin-top: 15px;
+  margin-bottom: 25px;
 }
-.max-height{
-  height: 400px;
+.max-height {
+  height: 360px;
   overflow: auto;
 }
