--- a/src/component/daily-cost/card/card.css
+++ b/src/component/daily-cost/card/card.css
@@ -1,25 +1,26 @@
-h1{
-    margin-top:-15px;
+h1 {
+  margin-top: -15px;
 }
-.card{
-    width: 60%;
-    padding:15px 10px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    margin-left: 15%;
-    margin-top:2.5px;
-    margin-bottom:2.5px;
+.card {
+  width: 60%;
+  padding: 15px 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 6px;
+  margin-left: 22%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 16px;
 }
-.card span:first-child{
-    font-size: 20px;
-    font-weight: 600;
-    display: inline-block;
-    width: 60%;
-    color: gray;
+.card span:first-child {
+  font-size: 20px;
+  font-weight: 600;
+  display: inline-block;
+  width: 60%;
+  color: gray;
 }
-.card span:last-child{
-color: rgb(57, 107, 122);
+.card span:last-child {
+  color: rgb(57, 107, 122);
 }
-.card p{
-    margin:5px;
-    color: red;
+.card p {
+  margin: 5px;
+  color: red;
 }
