--- a/src/component/daily-cost/daily-cost.css
+++ b/src/component/daily-cost/daily-cost.css
@@ -1,23 +1,22 @@
 .cost {
-    background-color: white;
-    height: inherit;
-    display: flex;
-    justify-content: space-between;
+  background-color: white;
+  height: inherit;
+  display: flex;
+  justify-content: space-between;
 }
 
 .left-content {
-    height: 100%;
-    border-right: 1px dotted gray;
-    width: 50%;
+  height: 100%;
+  width: 50%;
 }
 
 .right-content {
-    width: 48%;
-    color: gray;
-
+  width: 50%;
+  border-left: 1px solid rgb(216, 214, 214);
+  color: gray;
 }
 
 .card-container {
-    max-height: 380px;
-    overflow: auto;
+  max-height: 340px;
+  overflow: auto;
 }
