--- a/src/component/main-content/main-content.css
+++ b/src/component/main-content/main-content.css
@@ -1,6 +1,6 @@
-.main-content{
-    width: 100%;
-    height: 500px;
-    background-color: white;
-    padding:20px;
+.main-content {
+  width: 100%;
+  /* height: 500px; */
+  background-color: white;
+  padding: 20px;
 }
