--- a/src/component/menu/menu.css
+++ b/src/component/menu/menu.css
@@ -1,30 +1,31 @@
-.menu{
-    display: flex;
-    justify-content:center;
-    margin-bottom:20px;
-    width: 100%;
+.menu {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  width: 100%;
 }
-.menu-item{
-    padding:15px 20px;
-    width: 44%;
-    background-color: rgb(217, 208, 195);
-    align-items: center;
-    text-align: center;
-    font-size: 18px;
-    font-weight: 700;
-    color: rgb(50, 75, 78);
-    border-bottom: 1px solid  rgb(242, 133, 133);
-    transform: border 4s;
+.menu-item {
+  padding: 15px 20px;
+  width: 44%;
+  background-color: rgb(217, 208, 195);
+  align-items: center;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 700;
+  color: rgb(50, 75, 78);
+  border-bottom: 1px solid rgb(242, 133, 133);
+  transform: border 4s;
+  border-radius: 16px;
 }
 .menu-item i {
-    margin-right: 10px;
+  margin-right: 10px;
 }
-.menu-item.selected{
-    border-bottom: 3px solid red;
-    color:rgb(235, 62, 62);
+.menu-item.selected {
+  border-bottom: 3px solid red;
+  color: rgb(235, 62, 62);
 }
-.menu-content{
-    width: 60%;
-    display: flex;
-    justify-content: space-between;
+.menu-content {
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
 }
